Isolate modlauncher test callbacks, cleanup code