@@ -10,24 +10,27 @@ import org.junit.jupiter.api.*;
 import org.powermock.reflect.Whitebox;
 
 import java.time.Duration;
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Random;
 import java.util.concurrent.*;
 import java.util.concurrent.locks.AbstractQueuedSynchronizer;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class DeadlockingEventTest {
-    private static final boolean initializeAtClassloading = false;
-    private static final long waittimeout = 1; // number of seconds to wait before retrying. Bump this up to debug what's going on.
+class DeadlockingEventTest {
     public static final int BOUND = 10000;
-    public static ThreadPoolExecutor THREAD_POOL;
+    private static final boolean INITIALIZE_AT_CLASSLOADING = false;
+    private static final long WAIT_TIMEOUT = 1; // number of seconds to wait before retrying. Bump this up to debug what's going on.
+    
+    public static ExecutorService threadPool;
 
     @BeforeAll
     static void setup() {
         // force async logging
         System.setProperty("log4j2.contextSelector","org.apache.logging.log4j.core.async.AsyncLoggerContextSelector");
-        System.setProperty("test.harness", "out/production/classes,out/test/classes,out/testJars/classes,build/classes/java/main,build/classes/java/test,build/classes/java/testJars");
+        System.setProperty("test.harness", "");
         System.setProperty("test.harness.callable", "net.minecraftforge.eventbus.test.DeadlockingEventTest$Callback");
     }
 
@@ -39,25 +42,28 @@ public class DeadlockingEventTest {
 
     @BeforeEach
     void newThreadPool() {
-        THREAD_POOL = (ThreadPoolExecutor) Executors.newFixedThreadPool(2);
+        threadPool = Executors.newFixedThreadPool(2);
     }
-    @SuppressWarnings("unchecked")
+    
     @AfterEach
     void clearBusStuff() throws Exception {
         Whitebox.invokeMethod(EventListenerHelper.class, "clearAll");
-        final HashSet<AbstractQueuedSynchronizer> workers = Whitebox.getInternalState(THREAD_POOL, "workers");
-        final List<Thread> threads = workers.stream().map(w -> Whitebox.<Thread>getInternalState(w, "thread")).toList();
-        threads.stream().map(Thread::getStackTrace).forEach(ts->LogManager.getLogger().info("\n"+stack(ts)));
-        THREAD_POOL.shutdown();
+        final HashSet<AbstractQueuedSynchronizer> workers = Whitebox.getInternalState(threadPool, "workers");
+        workers.stream()
+            .map(w -> Whitebox.<Thread>getInternalState(w, "thread"))
+            .map(Thread::getStackTrace)
+            .forEach(ts->LogManager.getLogger().info("\n"+stack(ts)));
+        threadPool.shutdown();
     }
 
     private static String stack(StackTraceElement[] elts) {
-        StringBuilder sb = new StringBuilder();
+        final StringBuilder sb = new StringBuilder();
         for (StackTraceElement elt : elts) {
             sb.append("\tat ").append(elt).append("\n");
         }
         return sb.toString();
     }
+    
     public static class Callback {
         public static Callable<Void> supplier() {
             return () -> {
@@ -68,32 +74,31 @@ public class DeadlockingEventTest {
                 Callable<Void> task2 = () -> {
                     final int nanos = new Random().nextInt(BOUND);
                     LogManager.getLogger().info("Task 2: {}", nanos);
-                    long start = System.nanoTime();
+                    final long start = System.nanoTime();
                     cdl.await();
-                    final Class<? extends Event> clz = (Class<? extends Event>) Class.forName("net.minecraftforge.eventbus.test.DeadlockingEventArmsLength$ChildEvent", initializeAtClassloading, contextClassLoader);
+                    final Class<? extends Event> clz = (Class<? extends Event>) Class.forName("net.minecraftforge.eventbus.test.DeadlockingEventArmsLength$ChildEvent", INITIALIZE_AT_CLASSLOADING, contextClassLoader);
                     Thread.sleep(0, nanos);
                     LogManager.getLogger().info(System.nanoTime() - start);
-                    assertEquals(clz.newInstance().getListenerList(), EventListenerHelper.getListenerList(clz));
+                    assertEquals(clz.getConstructor().newInstance().getListenerList(), EventListenerHelper.getListenerList(clz));
                     LogManager.getLogger().info("Task 2");
                     return null;
                 };
                 Callable<Void> task1 = () -> {
                     final int nanos = new Random().nextInt(BOUND);
                     LogManager.getLogger().info("Task 1: {}", nanos);
-                    long start = System.nanoTime();
+                    final long start = System.nanoTime();
                     cdl.await();
-                    final Class<?> clz = Class.forName("net.minecraftforge.eventbus.test.DeadlockingEventArmsLength$Listener1", initializeAtClassloading, contextClassLoader);
+                    final Class<?> clz = Class.forName("net.minecraftforge.eventbus.test.DeadlockingEventArmsLength$Listener1", INITIALIZE_AT_CLASSLOADING, contextClassLoader);
                     Thread.sleep(0, nanos);
                     LogManager.getLogger().info(System.nanoTime() - start);
                     bus.register(clz);
                     LogManager.getLogger().info("Task 1");
                     return null;
                 };
-                final List<Future<Void>> futures = Stream.of(task1, task2).
-                        map(THREAD_POOL::submit).toList();
+                final List<Future<Void>> futures = Stream.of(task1, task2).map(threadPool::submit).toList();
                 cdl.countDown();
                 try {
-                    assertTimeoutPreemptively(Duration.ofSeconds(waittimeout), () -> futures.parallelStream().forEach(f -> {
+                    assertTimeoutPreemptively(Duration.ofSeconds(WAIT_TIMEOUT), () -> futures.parallelStream().forEach(f -> {
                         try {
                             f.get();
                         } catch (InterruptedException | ExecutionException e) {
